base models, specs, refactoring
